--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,3 +6,5 @@ $blue: hsl(212, 86%, 64%);
 $very-dark-blue: hsl(234, 12%, 34%);
 $grayish-blue: hsl(229, 6%, 66%);
 $very-light-gray: hsl(0, 0%, 98%);
+
+$ff: 'Poppins', sans-serif;
