--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,120 @@
 @import 'variables';
 @import 'reset';
+
+body {
+  font-family: $ff;
+  text-align: center;
+  background-color: $very-light-gray;
+  margin: 3rem 1.2rem;
+  height: 100vh;
+}
+
+.main-header {
+  h1,
+  h2 {
+    color: $very-dark-blue;
+  }
+
+  h2 {
+    font-weight: 200;
+  }
+
+  h1 {
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    color: rgba(163, 165, 174, 0.9);
+    font-size: 1rem;
+    margin-bottom: 3rem;
+  }
+}
+
+.main-content {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.5rem;
+  padding-bottom: 3rem;
+
+  article {
+    padding: 1.5rem;
+    text-align: left;
+    border-top: 3px solid $cyan;
+    border-radius: 6px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+    &:nth-child(2) {
+      border-color: $red;
+    }
+
+    &:nth-child(3) {
+      border-color: $orange;
+    }
+
+    &:nth-child(4) {
+      border-color: $blue;
+    }
+
+    header {
+      font-size: 1.2rem;
+      font-weight: 700;
+      color: $very-dark-blue;
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      font-size: 0.94rem;
+      color: $grayish-blue;
+      margin-bottom: 2rem;
+    }
+
+    img {
+      margin-left: auto;
+    }
+  }
+}
+
+@media (min-width: 50em) {
+  main {
+    max-width: 62.5rem;
+    margin: 0 auto;
+  }
+
+  body {
+    margin-bottom: 0rem;
+    margin-top: 1rem;
+    overflow: hidden;
+    display: grid;
+    place-content: center;
+  }
+
+  header p {
+    width: 65%;
+    margin: 0 auto;
+  }
+
+  .main-content {
+    grid-template-columns: repeat(3, 1fr);
+
+    article {
+      &:nth-child(1) {
+        grid-row: 1 / 3;
+        align-self: center;
+      }
+
+      &:nth-child(4) {
+        grid-column: 3 / 4;
+        grid-row: 1 / 3;
+        align-self: center;
+      }
+    }
+  }
+}
+
+@media (orientation: landscape) and (max-height: 500px) {
+  body {
+    height: 800px;
+    overflow: auto;
+  }
+}
