Articles bg-color changed to white

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,9 @@ body {
   .main-content {
     grid-template-columns: repeat(3, 1fr);
   }
+  .main-content article {
+    background-color: #fff;
+  }
   .main-content article:nth-child(1) {
     grid-row: 1/3;
     align-self: center;
