--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,6 +98,8 @@ body {
     grid-template-columns: repeat(3, 1fr);
 
     article {
+      background-color: #fff;
+
       &:nth-child(1) {
         grid-row: 1 / 3;
         align-self: center;
